--- a/src/components/item/taskItem.css
+++ b/src/components/item/taskItem.css
@@ -1,15 +1,72 @@
-.icon-delete{
-    border-radius: 30px;
-    font-size: 20px;
-    color: red;
-}
+.container {
+    border: 1px solid #ccc; 
+    border-radius: 8px; 
+    padding: 20px; 
+    margin: 20px; 
+  }
+  
+  h2 {
+    background-color: #f0f0f0;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    position: relative;
+    z-index: 1;
+  }
+  
+  .info {
+    list-style-type: none;
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    background-color: #e0e0e0;
+    border-radius: 5px;
+    margin-bottom: 40px; 
+  }
 .task{
     box-shadow: 0 0 10px grey;
-    padding: 10px 0;
+    padding: 10px;
     margin: 0 auto;
     position: relative;
     top: -35px;
-    border-radius: 30px;
+    border-radius: 8px;
     width: 450px;
     background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+
+.completed {
+    text-decoration: line-through;
+}
+
+.task-name {
+    margin-right: 8px;
+}
+
+.pending-button {
+    margin-right: 8px;
+    border-radius: 5px;
+    border-color:transparent;
+    background-color: rgba(0, 128, 0, 0.438);
+    padding: 5px;
+    color: white;
+    cursor: pointer;
+}
+
+.completed-text {
+    margin-right: 8px;
+}
+
+.pending-button:hover{
+    background-color: rgb(46, 255, 116);
+    box-shadow: 0 0 10px rgb(46, 255, 81);
+}
+.icon-delete{
+    border-radius: 18px;
+    font-size: 20px;
+    color: red;
 }
