Los estilos de taskList estan en taskItem.css fijense bien

--- a/src/components/form/taskForm.css
+++ b/src/components/form/taskForm.css
@@ -28,6 +28,7 @@
     border-radius: 10px;
     border-color: transparent;
     color: white;
+    cursor: pointer;
     letter-spacing: .5px;
     padding: 10px;
     width: 150px;
