--- a/src/TodoApp.css
+++ b/src/TodoApp.css
@@ -1,33 +1,47 @@
 body{
-  background-color: rgba(128, 128, 128, 0.486);
-  font-family: 'Roboto', sans-serif;
-}
-
-header{
-  width: 460px;
-  padding: 20px;
-  height: 150px;
-  position: relative;
-  margin: 30px auto 0 auto;
-  align-items: center;
-  background-image: linear-gradient(to right, rgba(107, 0, 107, 0.884), rgba(0, 0, 255, 0.747));
-  border-radius: 30px 30px 0 0;
+  margin: 0;
+  padding: 0;
+  background-color: #F9F0EF;
+  font-family: 'Segoe UI';
   display: flex;
   flex-direction: column;
-}
-
-header h1{
-  letter-spacing: .5px;
-  font-weight: normal;
-  color: white;
-}
-
-main{
-  width: 500px;
+  align-items: center;
   height: fit-content;
-  background-color: whitesmoke;
-  position: relative;
-  margin: 0 auto;
-  border-radius: 0 0 30px 30px;
 }
-
+header{
+  background-image: linear-gradient(to right, #604687, #526395);
+  text-align: center;
+  width: 600px;
+  height: 120px;
+  border-radius: 20px 20px 0 0;
+  box-shadow: 1px -3px 5px 1px rgba(0,0,0,0.58);
+  margin-top: 40px;
+}
+header h1{
+  color: white;
+  font-weight: lighter;
+}
+main{
+  background-color: #F7F7FF;
+  border-radius: 0 0 20px 20px;
+  box-shadow: 1px 5px 5px 1px rgba(0,0,0,0.58);
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+}
+main section{
+  background-color: #FFFFFF;
+  box-shadow: 1px 5px 5px 0px rgba(0,0,0,0.58);
+  border-radius: 10px;
+  margin: 4px;
+} 
+.container-taskForm{
+  text-align: center;
+  position: relative; 
+  top: -4rem; 
+}
+.container-taskList{
+  position: relative; 
+  top: -2rem;
+}
