--- a/src/components/form/taskForm.css
+++ b/src/components/form/taskForm.css
@@ -1,42 +1,28 @@
-.form{
-    border-bottom: -100px;
-}
-.input-container{
-    position: relative;
-    top: -4rem;
-    box-shadow: 0 0 10px grey;
-    padding: 10px;
-    border-radius: 10px;
-    margin: 0 auto;
-    background-color: white;
-    text-align: center;
-    width: 450px;
-}
-
-.input-container input{
-    margin: 20px 0;
-    width: 90%;
+form input{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 80%;
     padding: 5px;
     border: none;
     border-bottom: 1px solid black;
     font-size: 18px;
+    text-align: center;
+    outline: none;
 }
-
-.input-container button{
+form button{
     border: none;
-    font-size: 20px;
-    border-radius: 10px;
-    border-color: transparent;
+    font-size: 16px;
+    border-radius: 4px;
     color: white;
+    height: 28px;
+    width: 140px;
+    background-color: #ED6A5A;
+    box-shadow: 0 0 10px #ED6A5A;
+    margin-bottom: 16px;
     cursor: pointer;
-    letter-spacing: .5px;
-    padding: 10px;
-    width: 150px;
-    background-color: rgb(255, 127, 81);
-    box-shadow: 0 0 10px rgb(255, 127, 81);
 }
 
-.input-container button:hover{
+form button:hover{
     background-color: rgb(255, 102, 46);
     box-shadow: 0 0 10px rgb(255, 102, 46);
 }
