--- a/src/components/item/taskItem.css
+++ b/src/components/item/taskItem.css
@@ -1,78 +1,58 @@
-.container {
-    border: 1px solid #ccc; 
-    border-radius: 8px; 
-    padding: 20px; 
-    margin: 20px; 
-  }
-  
-  h2 {
-    background-color: #f0f0f0;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    position: relative;
-    z-index: 1;
-  }
-  
-  .info {
+h2{
+    margin: 20px 0 20px 20px;
+    font-size: 22px;
+}
+.info{
     list-style-type: none;
     padding: 15px;
     display: flex;
     justify-content: space-between;
     background-color: #e0e0e0;
-    border-radius: 5px;
-    margin-bottom: 40px; 
-  }
+}
 .task{
-    box-shadow: 0 0 10px grey;
     padding: 10px;
-    margin: 0 auto;
-    position: relative;
-    top: -35px;
-    border-radius: 8px;
-    width: 450px;
-    background-color: white;
     display: flex;
+    justify-content: space-between; 
     align-items: center;
-    justify-content: space-between;
     margin-bottom: 10px;
-    font-size: 20px;
+    margin-left: 8px;
 }
-
-
-.completed {
-    text-decoration: line-through;
-}
-
-.task-name {
-    margin-right: 8px;
+.task-name{
+    font-size: 18px;
     width: 100px;
     word-wrap: break-word;
 }
-
-.status-button {
-    margin-right: 8px;
+.completed .task-name{
+    text-decoration: line-through;
+}
+.pending-button{
     border-radius: 5px;
     border-color:transparent;
     background-color: rgba(0, 128, 0, 0.438);
     padding: 5px;
     color: white;
     cursor: pointer;
+    margin-left: -20px;
+    font-size: 16px;
 }
-
-.completed-text {
-    margin-right: 8px;
-}
-
-.status-button:hover{
+.pending-button:hover{
     background-color: rgb(46, 255, 116);
     box-shadow: 0 0 10px rgb(46, 255, 81);
+} 
+.completed-text{
+    border-radius: 5px;
+    border-color:transparent;
+    background-color: rgba(0, 128, 0, 0.438);
+    padding: 4px;
+    color: white;
+    margin-left: -20px;
 }
 .icon-delete{
-    border-radius: 18px;
-    border: transparent;
-    font-size: 20px;
+    border-radius: 10px 10px 14px 14px;
+    border: none;
     color: red;
+    font-size: 24px;
     cursor: pointer;
+    background-color: transparent;
+    margin-right: 8px;
 }
-
