--- a/src/TodoApp.css
+++ b/src/TodoApp.css
@@ -45,3 +45,13 @@ main section{
   position: relative; 
   top: -2rem;
 }
+
+/* Nuevo estilo para el mensaje "No hay tareas pendientes" */
+.container-taskList p {
+  background-color: #6ECB63; 
+  color: white;
+  padding: 10px;
+  text-align: center;
+  margin-top: 10px;
+}
+
